<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anasayfa"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:gravity="center"
      android:text="@string/arazide_l_m_bilgisi"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:layout_marginTop="50dp"
      android:src="@drawable/calculator"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />


  <LinearLayout
      android:layout_margin="48dp"
      android:id="@+id/linearLayout"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:gravity="center"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView">


    <Button
        android:layout_weight="1"
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/button_background"
        android:text="@string/har_ta_uzunlu_u_hesaplama"
        android:textColor="@color/white" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/button_background"
        android:text="@string/toplam_y_zde_e_m_hesaplama"
        android:textColor="@color/white" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/button_background"
        android:text="@string/uzunluk_hesaplama"
        android:textColor="@color/white" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/button_background"
        android:text="@string/e_m_hesaplama"
        android:textColor="@color/white" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/button_background"
        android:text="@string/alan_hesaplama"
        android:textColor="@color/white"
        android:textSize="16sp" />

  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>