<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anasayfa2"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


   <TextView
       android:id="@+id/textView2"
       android:layout_width="350dp"
       android:layout_height="60dp"
       android:layout_centerHorizontal="true"
       android:layout_marginStart="25dp"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="25dp"
       android:layout_marginBottom="104dp"
       android:text="@string/alan_hesaplama_form_l_n_ger_ek_alan_l_ekli_alan_l_ek"
       android:textColor="@color/white"
       android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toTopOf="@+id/lnr"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.571"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="MissingConstraints" />

   <LinearLayout
       android:id="@+id/lnr"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView2"
       android:layout_centerHorizontal="true"
       android:orientation="vertical"
       app:layout_constraintBottom_toTopOf="@+id/buttonHesapla"
       app:layout_constraintTop_toBottomOf="@+id/textView2"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">


      <EditText
          android:id="@+id/editTextOlcek"
          android:layout_width="350dp"
          android:layout_height="63dp"
          android:textColor="@color/colorRed"
          android:textColorHint="@color/colorRed"
          android:autofillHints="phone"
          android:hint="@string/l_e_i_girin"
          android:inputType="number"
           />

      <EditText
          android:id="@+id/editTextOlcekliAlan"
          android:layout_width="350dp"
          android:layout_height="63dp"
          android:layout_marginTop="30dp"
          android:textColor="@color/colorRed"
          android:textColorHint="@color/colorRed"
          android:autofillHints="phone"
          android:inputType="number"
          android:hint="@string/l_ekli_alan_girin"
          />

      <TextView
          android:id="@+id/textViewSonuc"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/editTextOlcekliAlan"
          android:layout_alignStart="@+id/editTextOlcekliAlan"
          android:layout_marginTop="30dp"
          android:text="@string/ger_ek_alan"
          android:textStyle="bold"
          android:textColor="@color/colorRed"
          android:textColorHint="@color/colorRed"
          android:textSize="18sp"
          />
   </LinearLayout>

   <Button
       android:id="@+id/buttonHesapla"
       android:layout_width="159dp"
       android:layout_height="60dp"
       android:layout_marginTop="35dp"
       android:background="@drawable/button_background"
       android:text="@string/hesapla"
       android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/lnr"
       app:layout_constraintTop_toBottomOf="@+id/lnr" />


</androidx.constraintlayout.widget.ConstraintLayout>



